# My_little_friend

./: .env.example  .gitignore  Reame.md  main.py  pyproject.toml
assistant/commands/: __init__.py  base.py
assistant/commands/ai_chat/: __init__.py  ask_ai.py
assistant/commands/example_module/: __init__.py  next.py  stop_module.py
assistant/commands/greetings/: hello.py
assistant/commands/yandex_music/: __init__.py  activate_module.py  play.py
assistant/config/: logging_config.yaml
assistant/core/: bot.py  command_handler.py  state_manager.py  task_manager.py
assistant/modules/api/: ai_bot.py
assistant/modules/nlp/: intent_parser.py  intents.json  lemmatizer.py
assistant/modules/speech/: recorder.py  stt.py  wake_word.py
assistant/modules/tts/: pyttsx3_engine.py
assistant/utils/: config.py  logger.py
